# RJCP.DLL.Log

./: .gitignore  LICENSE.md  README.md  RJCP.Diagnostics.Log.sln
TraceReader.Core/: README.md
TraceReader.Core/TraceReader/: ITraceLine.cs  ITraceReader.cs  ITraceReaderFactory.cs  ITraceWriter.cs  ITraceWriterFactory.cs  Log.cs  LogTraceLine.cs  RJCP.Diagnostics.Log.csproj  TeraTermTraceReaderFactory.cs  TextTraceReaderFactory.cs  TraceLine.cs  TraceReader.cs  TraceReaderFactory.cs
TraceReader.Core/TraceReader/Constraints/: Constraint.cs  ConstraintCompiled.cs  ConstraintException.cs  ConstraintExprTree.cs  ConstraintList.cs  ConstraintOptions.cs  ConstraintTokens.cs  IConstraintBase.cs  IMatchConstraint.cs  InstanceOf.cs  None.cs  Null.cs  TextEquals.cs  TextIEquals.cs  TextIRegEx.cs  TextIString.cs  TextRegEx.cs  TextStartsWith.cs  TextString.cs  TypeOf.cs
TraceReader.Core/TraceReader/Decoder/: ITraceDecoder.cs  ITraceDecoderFactory.cs  TeraTermDecoder.cs  TeraTermDecoderFactory.cs  TextDecoder.cs  TextDecoderBase.cs  TextDecoderFactory.cs
TraceReader.Core/TraceReader/Encoder/: ITraceEncoder.cs  ITraceEncoderFactory.cs
TraceReader.Core/TraceReaderTest/: EmptyTraceReaderFactory.cs  RJCP.Diagnostics.LogTest.csproj  TeraTermTraceReaderTest.cs  TextTraceReaderTest.cs  TraceReaderFactoryTest.cs  TraceReaderTest.cs
TraceReader.Core/TraceReaderTest/Constraints/: ConstraintTest.cs  Counter.cs  InvalidConstraint.cs  Position.cs  TraceLineTimeStamp.cs
TraceReader.Core/TraceReaderTest/Decoder/: EmptyTraceDecoder.cs  TeraTermDecoderFactoryTest.cs
TraceReader.Core/TraceReaderTest/IO/: MemoryStreamDisposed.cs  ReadLimitStream.cs  WriteOnlyStream.cs
TraceReader.Dlt/: README.md
TraceReader.Dlt/DltTraceReader/: DltControlTraceLine.cs  DltFileTraceReaderFactory.cs  DltFileTraceWriterFactory.cs  DltNonVerboseTraceLine.cs  DltSerialTraceReaderFactory.cs  DltSkippedTraceLine.cs  DltTraceLine.cs  DltTraceReaderFactory.cs  DltTraceWriter.cs  DltTraceWriterFactory.cs  Log.cs  RJCP.Diagnostics.Log.Dlt.csproj
TraceReader.Dlt/DltTraceReader/Collections/: ReadOnlyArrayList.cs
TraceReader.Dlt/DltTraceReader/Constraints/: Awake.cs  DltAppId.cs  DltConstraintExtensions.cs  DltCtxId.cs  DltEcuId.cs  DltIsControl.cs  DltIsVerbose.cs  DltMessageId.cs  DltMessageType.cs  DltSessionId.cs
TraceReader.Dlt/DltTraceReader/Decoder/: DltFileTraceDecoder.cs  DltFileTraceDecoderFactory.cs  DltSerialTraceDecoder.cs  DltSerialTraceDecoderFactory.cs  DltTraceDecoder.cs  DltTraceDecoderBase+LineCache.cs  DltTraceDecoderBase+PosMap.cs  DltTraceDecoderBase.cs  DltTraceDecoderFactory.cs
TraceReader.Dlt/DltTraceReader/Dlt/: DltConstants.cs  DltDecodeException.cs  DltEncodeException.cs  DltLineBuilder.cs  DltLineFeatures.cs  DltTraceLineBase.cs  DltType.cs  (+4 more)
TraceReader.Dlt/DltTraceReaderBenchmark/: DltDecoderArgBenchmark.cs  DltDecoderBenchmark.cs  GlobalSuppressions.cs  RJCP.Diagnostics.Log.DltBenchmark.csproj
TraceReader.Dlt/DltTraceReaderTest/: DltControlTraceLineTest.cs  DltFactory.cs  DltFactoryType.cs  DltFileTraceReaderFactoryTest.cs  DltFileTraceWriterFactoryTest.cs  DltSerialTraceReaderFactoryTest.cs  DltSkippedTraceLineTest.cs  DltTestData.cs  DltTime.cs  DltTraceLineTest.cs  DltTraceReaderFactoryTest.cs  DltTraceWriterFactoryTest.cs  DltTraceWriterTest.cs  GlobalLogger.cs  GlobalSuppressions.cs  RJCP.Diagnostics.Log.DltTest.csproj  TestSetupFixture.cs
TraceReader.Dlt/docs/: DLT.Benchmarks.md  DLT.DecoderDesign.md  DLT.Format.Problems.md  DLT.Format.md  DLT.Logging.md  DLT.WriterDesign.md
apps/DltDump/: CHANGES.md  README.md
apps/DltDump/tools/dltudpbeacon/: BUILD.md  CMakeLists.txt
apps/DltDump/tools/dltudpbeacon/src/: config.h.in  dlt.cpp  dlt.h  dltudpbeacon.cpp  dltudpbeacon.h  sockaddr4.cpp  sockaddr4.h  udp4.cpp  udp4.h
apps/DltDump/tools/dltudpbeacon/toolchain/: qcc710_x86_64
docs/: Architecture.md  Constraints.md  DesignNotes.md  README.md  TraceReader.Dlt.md  TraceReader.Text.md
docs/diagrams/: ITraceDecoder.plantuml  ITraceReader.plantuml  TextDecoder.plantuml
(+802 files in other folders)
